include/rthw.h

#define RT_CPU_CACHE_LINE_SZ    32
void rt_hw_exception_install(rt_err_t (*exception_handle)(void *context));