include/rtdef.h


#define RT_VERSION_MAJOR                5               
#define RT_VERSION_MINOR                0               
#define RT_VERSION_PATCH                2               
typedef int                             rt_bool_t;      
typedef signed long                     rt_base_t;      
typedef unsigned long                   rt_ubase_t;     
typedef int8_t                          rt_int8_t;      
typedef int16_t                         rt_int16_t;     
typedef int32_t                         rt_int32_t;     
typedef uint8_t                         rt_uint8_t;     
typedef uint16_t                        rt_uint16_t;    
typedef uint32_t                        rt_uint32_t;    
typedef int64_t                         rt_int64_t;     
typedef uint64_t                        rt_uint64_t;    
typedef signed   char                   rt_int8_t;      
typedef signed   short                  rt_int16_t;     
typedef signed   int                    rt_int32_t;     
typedef unsigned char                   rt_uint8_t;     
typedef unsigned short                  rt_uint16_t;    
typedef unsigned int                    rt_uint32_t;    
typedef signed long                     rt_int64_t;     
typedef unsigned long                   rt_uint64_t;    
typedef signed long long                rt_int64_t;     
typedef unsigned long long              rt_uint64_t;    
typedef size_t                          rt_size_t;      
typedef ssize_t                         rt_ssize_t;     
typedef rt_ubase_t                      rt_size_t;      
typedef rt_base_t                       rt_ssize_t;     
typedef rt_uint32_t                     rt_time_t;      
typedef rt_uint32_t                     rt_tick_t;      
typedef rt_base_t                       rt_flag_t;      
typedef rt_ubase_t                      rt_dev_t;       
typedef rt_base_t                       rt_off_t;       
    typedef rt_base_t rt_atomic_t;
    typedef atomic_size_t rt_atomic_t;
        typedef atomic_size_t rt_atomic_t;
        typedef rt_base_t rt_atomic_t;
#define RT_TRUE                         1               
#define RT_FALSE                        0               
#define RT_NULL                         0
#define RT_UINT8_MAX                    UINT8_MAX       
#define RT_UINT16_MAX                   UINT16_MAX      
#define RT_UINT32_MAX                   UINT32_MAX      
#define RT_UINT8_MAX                    0xff            
#define RT_UINT16_MAX                   0xffff          
#define RT_UINT32_MAX                   0xffffffff      
#define RT_TICK_MAX                     RT_UINT32_MAX   
#define RT_SEM_VALUE_MAX                RT_UINT16_MAX   
#define RT_MUTEX_VALUE_MAX              RT_UINT16_MAX   
#define RT_MUTEX_HOLD_MAX               RT_UINT8_MAX    
#define RT_MB_ENTRY_MAX                 RT_UINT16_MAX   
#define RT_MQ_ENTRY_MAX                 RT_UINT16_MAX   
typedef __builtin_va_list           __gnuc_va_list;
typedef __gnuc_va_list              va_list;
typedef int (*init_fn_t)(void);
        struct rt_init_desc
        {
            const char* level;
            const init_fn_t fn;
            const char* fn_name;
        };
        struct rt_init_desc
        {
            const char* level;
            const init_fn_t fn;
        };
        struct rt_init_desc
        {
            const char* fn_name;
            const init_fn_t fn;
        };
#define RT_EVENT_LENGTH                 32
#define RT_MM_PAGE_SIZE                 4096
#define RT_MM_PAGE_MASK                 (RT_MM_PAGE_SIZE - 1)
#define RT_MM_PAGE_BITS                 12
#define RT_EOK                          0               
#define RT_ERROR                        255             
#define RT_ETIMEOUT                     ETIMEDOUT       
#define RT_EFULL                        ENOSPC          
#define RT_EEMPTY                       ENODATA         
#define RT_ENOMEM                       ENOMEM          
#define RT_ENOSYS                       ENOSYS          
#define RT_EBUSY                        EBUSY           
#define RT_EIO                          EIO             
#define RT_EINTR                        EINTR           
#define RT_EINVAL                       EINVAL          
#define RT_ENOENT                       ENOENT          
#define RT_ENOSPC                       ENOSPC          
#define RT_EPERM                        EPERM           
#define RT_ETRAP                        254             
#define RT_EOK                          0               
#define RT_ERROR                        1               
#define RT_ETIMEOUT                     2               
#define RT_EFULL                        3               
#define RT_EEMPTY                       4               
#define RT_ENOMEM                       5               
#define RT_ENOSYS                       6               
#define RT_EBUSY                        7               
#define RT_EIO                          8               
#define RT_EINTR                        9               
#define RT_EINVAL                       10              
#define RT_ENOENT                       11              
#define RT_ENOSPC                       12              
#define RT_EPERM                        13              
#define RT_ETRAP                        14              
struct rt_list_node
{
    struct rt_list_node *next;                          
    struct rt_list_node *prev;                          
};
typedef struct rt_list_node rt_list_t;                  
struct rt_slist_node
{
    struct rt_slist_node *next;                         
};
#define RT_OBJECT_FLAG_MODULE           0x80            
#define RT_TIMER_FLAG_DEACTIVATED       0x0             
#define RT_TIMER_FLAG_ACTIVATED         0x1             
#define RT_TIMER_FLAG_ONE_SHOT          0x0             
#define RT_TIMER_FLAG_PERIODIC          0x2             
#define RT_TIMER_FLAG_HARD_TIMER        0x0             
#define RT_TIMER_FLAG_SOFT_TIMER        0x4             
#define RT_TIMER_CTRL_SET_TIME          0x0             
#define RT_TIMER_CTRL_GET_TIME          0x1             
#define RT_TIMER_CTRL_SET_ONESHOT       0x2             
#define RT_TIMER_CTRL_SET_PERIODIC      0x3             
#define RT_TIMER_CTRL_GET_STATE         0x4             
#define RT_TIMER_CTRL_GET_REMAIN_TIME   0x5             
#define RT_TIMER_CTRL_GET_FUNC          0x6             
#define RT_TIMER_CTRL_SET_FUNC          0x7             
#define RT_TIMER_CTRL_GET_PARM          0x8             
#define RT_TIMER_CTRL_SET_PARM          0x9             
#define RT_TIMER_SKIP_LIST_LEVEL          1
#define RT_TIMER_SKIP_LIST_MASK         0x3             
#define RT_THREAD_INIT                       0x00                
#define RT_THREAD_CLOSE                      0x01                
#define RT_THREAD_READY                      0x02                
#define RT_THREAD_RUNNING                    0x03                
#define RT_THREAD_SUSPEND_MASK               0x04
#define RT_SIGNAL_COMMON_WAKEUP_MASK         0x02
#define RT_SIGNAL_KILL_WAKEUP_MASK           0x01
#define RT_THREAD_SUSPEND_INTERRUPTIBLE      (RT_THREAD_SUSPEND_MASK)                                                             
#define RT_THREAD_SUSPEND                    RT_THREAD_SUSPEND_INTERRUPTIBLE
#define RT_THREAD_SUSPEND_KILLABLE           (RT_THREAD_SUSPEND_MASK | RT_SIGNAL_COMMON_WAKEUP_MASK)                              
#define RT_THREAD_SUSPEND_UNINTERRUPTIBLE    (RT_THREAD_SUSPEND_MASK | RT_SIGNAL_COMMON_WAKEUP_MASK | RT_SIGNAL_KILL_WAKEUP_MASK) 
#define RT_THREAD_STAT_MASK                  0x07
#define RT_THREAD_STAT_YIELD            0x08                
#define RT_THREAD_STAT_YIELD_MASK       RT_THREAD_STAT_YIELD
#define RT_THREAD_STAT_SIGNAL           0x10                
#define RT_THREAD_STAT_SIGNAL_READY     (RT_THREAD_STAT_SIGNAL | RT_THREAD_READY)
#define RT_THREAD_STAT_SIGNAL_WAIT      0x20                
#define RT_THREAD_STAT_SIGNAL_PENDING   0x40                
#define RT_THREAD_STAT_SIGNAL_MASK      0xf0
#define RT_THREAD_CTRL_STARTUP          0x00                
#define RT_THREAD_CTRL_CLOSE            0x01                
#define RT_THREAD_CTRL_CHANGE_PRIORITY  0x02                
#define RT_THREAD_CTRL_INFO             0x03                
#define RT_THREAD_CTRL_BIND_CPU         0x04                
#define RT_IPC_FLAG_FIFO                0x00            
#define RT_IPC_FLAG_PRIO                0x01            
#define RT_IPC_CMD_UNKNOWN              0x00            
#define RT_IPC_CMD_RESET                0x01            
#define RT_IPC_CMD_GET_STATE            0x02            
#define RT_WAITING_FOREVER              -1              
#define RT_WAITING_NO                   0               
#define RT_EVENT_FLAG_AND               0x01            
#define RT_EVENT_FLAG_OR                0x02            
#define RT_EVENT_FLAG_CLEAR             0x04            
#define RT_DEVICE_FLAG_DEACTIVATE       0x000           
#define RT_DEVICE_FLAG_RDONLY           0x001           
#define RT_DEVICE_FLAG_WRONLY           0x002           
#define RT_DEVICE_FLAG_RDWR             0x003           
#define RT_DEVICE_FLAG_REMOVABLE        0x004           
#define RT_DEVICE_FLAG_STANDALONE       0x008           
#define RT_DEVICE_FLAG_ACTIVATED        0x010           
#define RT_DEVICE_FLAG_SUSPENDED        0x020           
#define RT_DEVICE_FLAG_STREAM           0x040           
#define RT_DEVICE_FLAG_INT_RX           0x100           
#define RT_DEVICE_FLAG_DMA_RX           0x200           
#define RT_DEVICE_FLAG_INT_TX           0x400           
#define RT_DEVICE_FLAG_DMA_TX           0x800           
#define RT_DEVICE_OFLAG_CLOSE           0x000           
#define RT_DEVICE_OFLAG_RDONLY          0x001           
#define RT_DEVICE_OFLAG_WRONLY          0x002           
#define RT_DEVICE_OFLAG_RDWR            0x003           
#define RT_DEVICE_OFLAG_OPEN            0x008           
#define RT_DEVICE_OFLAG_MASK            0xf0f           
#define RT_DEVICE_CTRL_RESUME           0x01            
#define RT_DEVICE_CTRL_SUSPEND          0x02            
#define RT_DEVICE_CTRL_CONFIG           0x03            
#define RT_DEVICE_CTRL_CLOSE            0x04            
#define RT_DEVICE_CTRL_NOTIFY_SET       0x05            
#define RT_DEVICE_CTRL_SET_INT          0x06            
#define RT_DEVICE_CTRL_CLR_INT          0x07            
#define RT_DEVICE_CTRL_GET_INT          0x08            
#define RT_DEVICE_CTRL_CONSOLE_OFLAG    0x09            
#define RT_DEVICE_CTRL_MASK             0x1f            
#define RT_DRIVER_MATCH_DTS (1<<0)
#define RT_DEVICE_CTRL_CURSOR_SET_POSITION  0x10
#define RT_DEVICE_CTRL_CURSOR_SET_TYPE      0x11