blue/os_compat/rt_thread/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub const RT_NAME_MAX: u32 = 8;
pub const RT_ALIGN_SIZE: u32 = 8;
pub const RT_THREAD_PRIORITY_MAX: u32 = 256;
pub const RT_TICK_PER_SECOND: u32 = 100;
pub const RT_IDLE_HOOK_LIST_SIZE: u32 = 4;
pub const IDLE_THREAD_STACK_SIZE: u32 = 2048;
pub const RT_TIMER_THREAD_PRIO: u32 = 4;
pub const RT_TIMER_THREAD_STACK_SIZE: u32 = 2048;
pub const RT_CONSOLEBUF_SIZE: u32 = 256;
pub const RT_CONSOLE_DEVICE_NAME: &[u8; 6] = b"uart0\0";
pub const RT_VER_NUM: u32 = 327682;
pub const RT_MAIN_THREAD_STACK_SIZE: u32 = 4096;
pub const RT_MAIN_THREAD_PRIORITY: u32 = 10;
pub const FINSH_THREAD_NAME: &[u8; 7] = b"tshell\0";
pub const FINSH_THREAD_PRIORITY: u32 = 20;
pub const FINSH_THREAD_STACK_SIZE: u32 = 4096;
pub const FINSH_HISTORY_LINES: u32 = 5;
pub const FINSH_CMD_SIZE: u32 = 80;
pub const FINSH_ARG_MAX: u32 = 10;
pub const DFS_FD_MAX: u32 = 16;
pub const DFS_FILESYSTEMS_MAX: u32 = 4;
pub const DFS_FILESYSTEM_TYPES_MAX: u32 = 4;
pub const RT_UNAMED_PIPE_NUMBER: u32 = 64;
pub const RT_SERIAL_RB_BUFSZ: u32 = 64;
pub const RT_LIBC_TZ_DEFAULT_HOUR: u32 = 8;
pub const RT_LIBC_TZ_DEFAULT_MIN: u32 = 0;
pub const RT_LIBC_TZ_DEFAULT_SEC: u32 = 0;
pub const UTEST_THR_STACK_SIZE: u32 = 4096;
pub const UTEST_THR_PRIORITY: u32 = 20;
pub const RT_VERSION_MAJOR: u32 = 5;
pub const RT_VERSION_MINOR: u32 = 0;
pub const RT_VERSION_PATCH: u32 = 2;
pub const RT_TRUE: u32 = 1;
pub const RT_FALSE: u32 = 0;
pub const RT_NULL: u32 = 0;
pub const RT_UINT8_MAX: u32 = 255;
pub const RT_UINT16_MAX: u32 = 65535;
pub const RT_UINT32_MAX: u32 = 4294967295;
pub const RT_TICK_MAX: u32 = 4294967295;
pub const RT_SEM_VALUE_MAX: u32 = 65535;
pub const RT_MUTEX_VALUE_MAX: u32 = 65535;
pub const RT_MUTEX_HOLD_MAX: u32 = 255;
pub const RT_MB_ENTRY_MAX: u32 = 65535;
pub const RT_MQ_ENTRY_MAX: u32 = 65535;
pub const RT_EVENT_LENGTH: u32 = 32;
pub const RT_MM_PAGE_SIZE: u32 = 4096;
pub const RT_MM_PAGE_MASK: u32 = 4095;
pub const RT_MM_PAGE_BITS: u32 = 12;
pub const RT_EOK: u32 = 0;
pub const RT_ERROR: u32 = 255;
pub const RT_ETIMEOUT: u32 = 116;
pub const RT_EFULL: u32 = 28;
pub const RT_EEMPTY: u32 = 61;
pub const RT_ENOMEM: u32 = 12;
pub const RT_ENOSYS: u32 = 88;
pub const RT_EBUSY: u32 = 16;
pub const RT_EIO: u32 = 5;
pub const RT_EINTR: u32 = 4;
pub const RT_EINVAL: u32 = 22;
pub const RT_ENOENT: u32 = 2;
pub const RT_ENOSPC: u32 = 28;
pub const RT_EPERM: u32 = 1;
pub const RT_ETRAP: u32 = 254;
pub const RT_OBJECT_FLAG_MODULE: u32 = 128;
pub const NAME_MAX: u32 = 8;
pub const RT_TIMER_FLAG_DEACTIVATED: u32 = 0;
pub const RT_TIMER_FLAG_ACTIVATED: u32 = 1;
pub const RT_TIMER_FLAG_ONE_SHOT: u32 = 0;
pub const RT_TIMER_FLAG_PERIODIC: u32 = 2;
pub const RT_TIMER_FLAG_HARD_TIMER: u32 = 0;
pub const RT_TIMER_FLAG_SOFT_TIMER: u32 = 4;
pub const RT_TIMER_FLAG_THREAD_TIMER: u32 = 16;
pub const RT_TIMER_CTRL_SET_TIME: u32 = 0;
pub const RT_TIMER_CTRL_GET_TIME: u32 = 1;
pub const RT_TIMER_CTRL_SET_ONESHOT: u32 = 2;
pub const RT_TIMER_CTRL_SET_PERIODIC: u32 = 3;
pub const RT_TIMER_CTRL_GET_STATE: u32 = 4;
pub const RT_TIMER_CTRL_GET_REMAIN_TIME: u32 = 5;
pub const RT_TIMER_CTRL_GET_FUNC: u32 = 6;
pub const RT_TIMER_CTRL_SET_FUNC: u32 = 7;
pub const RT_TIMER_CTRL_GET_PARM: u32 = 8;
pub const RT_TIMER_CTRL_SET_PARM: u32 = 9;
pub const RT_TIMER_SKIP_LIST_LEVEL: u32 = 1;
pub const RT_TIMER_SKIP_LIST_MASK: u32 = 3;
pub const RT_THREAD_INIT: u32 = 0;
pub const RT_THREAD_CLOSE: u32 = 1;
pub const RT_THREAD_READY: u32 = 2;
pub const RT_THREAD_RUNNING: u32 = 3;
pub const RT_THREAD_SUSPEND_MASK: u32 = 4;
pub const RT_SIGNAL_COMMON_WAKEUP_MASK: u32 = 2;
pub const RT_SIGNAL_KILL_WAKEUP_MASK: u32 = 1;
pub const RT_THREAD_SUSPEND_INTERRUPTIBLE: u32 = 4;
pub const RT_THREAD_SUSPEND: u32 = 4;
pub const RT_THREAD_SUSPEND_KILLABLE: u32 = 6;
pub const RT_THREAD_SUSPEND_UNINTERRUPTIBLE: u32 = 7;
pub const RT_THREAD_STAT_MASK: u32 = 7;
pub const RT_THREAD_STAT_YIELD: u32 = 8;
pub const RT_THREAD_STAT_YIELD_MASK: u32 = 8;
pub const RT_THREAD_STAT_SIGNAL: u32 = 16;
pub const RT_THREAD_STAT_SIGNAL_READY: u32 = 18;
pub const RT_THREAD_STAT_SIGNAL_WAIT: u32 = 32;
pub const RT_THREAD_STAT_SIGNAL_PENDING: u32 = 64;
pub const RT_THREAD_STAT_SIGNAL_MASK: u32 = 240;
pub const RT_THREAD_CTRL_STARTUP: u32 = 0;
pub const RT_THREAD_CTRL_CLOSE: u32 = 1;
pub const RT_THREAD_CTRL_CHANGE_PRIORITY: u32 = 2;
pub const RT_THREAD_CTRL_INFO: u32 = 3;
pub const RT_THREAD_CTRL_BIND_CPU: u32 = 4;
pub const RT_IPC_FLAG_FIFO: u32 = 0;
pub const RT_IPC_FLAG_PRIO: u32 = 1;
pub const RT_IPC_CMD_UNKNOWN: u32 = 0;
pub const RT_IPC_CMD_RESET: u32 = 1;
pub const RT_IPC_CMD_GET_STATE: u32 = 2;
pub const RT_WAITING_FOREVER: i32 = -1;
pub const RT_WAITING_NO: u32 = 0;
pub const RT_EVENT_FLAG_AND: u32 = 1;
pub const RT_EVENT_FLAG_OR: u32 = 2;
pub const RT_EVENT_FLAG_CLEAR: u32 = 4;
pub const RT_DEVICE_FLAG_DEACTIVATE: u32 = 0;
pub const RT_DEVICE_FLAG_RDONLY: u32 = 1;
pub const RT_DEVICE_FLAG_WRONLY: u32 = 2;
pub const RT_DEVICE_FLAG_RDWR: u32 = 3;
pub const RT_DEVICE_FLAG_REMOVABLE: u32 = 4;
pub const RT_DEVICE_FLAG_STANDALONE: u32 = 8;
pub const RT_DEVICE_FLAG_ACTIVATED: u32 = 16;
pub const RT_DEVICE_FLAG_SUSPENDED: u32 = 32;
pub const RT_DEVICE_FLAG_STREAM: u32 = 64;
pub const RT_DEVICE_FLAG_INT_RX: u32 = 256;
pub const RT_DEVICE_FLAG_DMA_RX: u32 = 512;
pub const RT_DEVICE_FLAG_INT_TX: u32 = 1024;
pub const RT_DEVICE_FLAG_DMA_TX: u32 = 2048;
pub const RT_DEVICE_OFLAG_CLOSE: u32 = 0;
pub const RT_DEVICE_OFLAG_RDONLY: u32 = 1;
pub const RT_DEVICE_OFLAG_WRONLY: u32 = 2;
pub const RT_DEVICE_OFLAG_RDWR: u32 = 3;
pub const RT_DEVICE_OFLAG_OPEN: u32 = 8;
pub const RT_DEVICE_OFLAG_MASK: u32 = 3855;
pub const RT_DEVICE_CTRL_RESUME: u32 = 1;
pub const RT_DEVICE_CTRL_SUSPEND: u32 = 2;
pub const RT_DEVICE_CTRL_CONFIG: u32 = 3;
pub const RT_DEVICE_CTRL_CLOSE: u32 = 4;
pub const RT_DEVICE_CTRL_NOTIFY_SET: u32 = 5;
pub const RT_DEVICE_CTRL_SET_INT: u32 = 6;
pub const RT_DEVICE_CTRL_CLR_INT: u32 = 7;
pub const RT_DEVICE_CTRL_GET_INT: u32 = 8;
pub const RT_DEVICE_CTRL_CONSOLE_OFLAG: u32 = 9;
pub const RT_DEVICE_CTRL_MASK: u32 = 31;
pub const RT_DRIVER_MATCH_DTS: u32 = 1;
pub const RT_DEVICE_CTRL_CURSOR_SET_POSITION: u32 = 16;
pub const RT_DEVICE_CTRL_CURSOR_SET_TYPE: u32 = 17;
pub const RT_CPU_CACHE_LINE_SZ: u32 = 32;
pub type rt_bool_t = core::ffi::c_int;
pub type rt_base_t = core::ffi::c_long;
pub type rt_ubase_t = core::ffi::c_ulong;
pub type rt_int8_t = core::ffi::c_schar;
pub type rt_int16_t = core::ffi::c_short;
pub type rt_int32_t = core::ffi::c_int;
pub type rt_uint8_t = core::ffi::c_uchar;
pub type rt_uint16_t = core::ffi::c_ushort;
pub type rt_uint32_t = core::ffi::c_uint;
pub type rt_int64_t = core::ffi::c_longlong;
pub type rt_uint64_t = core::ffi::c_ulonglong;
pub type rt_size_t = rt_ubase_t;
pub type rt_ssize_t = rt_base_t;
pub type rt_err_t = rt_base_t;
pub type rt_time_t = rt_uint32_t;
pub type rt_tick_t = rt_uint32_t;
pub type rt_flag_t = rt_base_t;
pub type rt_dev_t = rt_ubase_t;
pub type rt_off_t = rt_base_t;
pub type rt_atomic_t = rt_base_t;
pub type __gnuc_va_list = u32;
pub type va_list = __gnuc_va_list;
pub type init_fn_t = ::core::option::Option<unsafe extern "C" fn() -> core::ffi::c_int>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_init_desc {
    pub fn_name: *const core::ffi::c_char,
    pub fn_: init_fn_t,
}
#[test]
fn bindgen_test_layout_rt_init_desc() {
    const UNINIT: ::core::mem::MaybeUninit<rt_init_desc> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_init_desc>(),
        8usize,
        concat!("Size of: ", stringify!(rt_init_desc))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_init_desc>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_init_desc))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fn_name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_init_desc),
            "::",
            stringify!(fn_name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fn_) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_init_desc),
            "::",
            stringify!(fn_)
        )
    );
}
#[doc = " Double List structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_list_node {
    #[doc = "< point to next node."]
    pub next: *mut rt_list_node,
    #[doc = "< point to prev node."]
    pub prev: *mut rt_list_node,
}
#[test]
fn bindgen_test_layout_rt_list_node() {
    const UNINIT: ::core::mem::MaybeUninit<rt_list_node> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_list_node>(),
        8usize,
        concat!("Size of: ", stringify!(rt_list_node))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_list_node>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_list_node))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_list_node),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).prev) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_list_node),
            "::",
            stringify!(prev)
        )
    );
}
#[doc = " Double List structure"]
pub type rt_list_t = rt_list_node;
#[doc = " Single List structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_slist_node {
    #[doc = "< point to next node."]
    pub next: *mut rt_slist_node,
}
#[test]
fn bindgen_test_layout_rt_slist_node() {
    const UNINIT: ::core::mem::MaybeUninit<rt_slist_node> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_slist_node>(),
        4usize,
        concat!("Size of: ", stringify!(rt_slist_node))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_slist_node>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_slist_node))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_slist_node),
            "::",
            stringify!(next)
        )
    );
}
